# lm1972m-pico

./: CMakeLists.txt  README.md  build.sh  hello_serial.c
